overflow fixing

--- a/public/style.css
+++ b/public/style.css
@@ -13,4 +13,5 @@
 }
 *,html,body{
     overflow-x: hidden;
+    border: 1px solid black;
 }
